# learn-bazel

./: .gitignore  README.md  WORKSPACE.bazel  requirements.txt
.github/workflows/: ci.yml
app/: BUILD.bazel  main.py
docs/notes/: HOW_TO_RUN_IT_LOCALLY.md  MODULES_VS_WORKSPACES.md  WORKSPACE_DEBUGGING.md
docs/qa/: SESSION_001.md  SESSION_002.md
lib/: BUILD.bazel
